src/test/deca/context/valid/valid_essentiel/instanceof.deca
// Description:
//    Programme de test de instanceof.

class A {}

class B extends A {}

class C extends B {}


{
	A a = new A();
	B b = new B();
	C c = new C();
	a instanceof A;
	b instanceof A;
	c instanceof A;
	a instanceof Object;
	a instanceof B;
}