src/test/deca/context/invalid/invalid_complet/instanceof.deca
// Description:
//    Programme de test de instanceof.

class A {}

{
	A a = new A();
	int i;
	i instanceof A;
	a instanceof int;
}